Remove DCAE references from core SDC
 Remove DCAE-related versions and docker_run.sh functionality
 (these should be handled in dt-be-main)

 Note that this change cancels https://gerrit.onap.org/r/#/c/sdc/+/88549/

Change-Id: I9c04331af6f05443ae4c7378b7072edd110fdc6d
Issue-ID: SDC-2357
Signed-off-by: kaihlavi <l.kaihlavirt@partner.samsung.com>